# PPS-RecSys-Nicolas

./: Interfaz de la libreria.txt  README.md  als_example.py  bpr_example.py  cosine_example.py  global_average_example.py  improvement and fixes.txt  improvement_and_fixes.md  knn_example.py  library_interface.md  pearson_example.py  persistence_example.py  pyproject.toml  requirements.txt  setup.py  svd_example.py  warp_example.py
Metrics/: f1.py  mae.py  rmse.py
Models/: als.py  base.py  bpr.py  global_average.py  item_average.py  knn.py  knn_baseline.py  knn_basic.py  knn_with_means.py  knn_with_z_score.py  surprise_wrapper.py  svd.py  user_average.py  warp.py
accuracy/: auc.py  f1.py  mae.py  precision.py  recall.py  rmse.py
example/: als_example.py  bpr_example.py  class_accuracy_example.py  class_algorithm_example.py  cosine_example.py  cross_validation_example.py  global_average_example.py  knn_example.py  pearson_example.py  persistence_example.py  svd_example.py  usage_example.py  warp_example.py
metrics/: cosine.py  pearson.py
model_selection/: cross_validation.py  grid_search_cv.py
persistence/: dump.py  load.py
pyrecsys/accuracy/: auc.py  f1.py  fcp.py  mae.py  precision.py  recall.py  rmse.py
pyrecsys/metrics/: cosine.py  pearson.py
pyrecsys/model_selection/: cross_validation.py  grid_search_cv.py
pyrecsys/models/: als.py  base.py  bpr.py  global_average.py  item_average.py  svd.py  warp.py  (+1 more)
tests/: test_als.py  test_bpr.py  test_cosine.py  test_global_average.py  test_knn.py  test_pearson.py  test_persistence.py  test_svd.py  test_warp.py
(+2 files in other folders)
